--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ h1, h3, p{
 /* Set the apperance of the class, chart */
 .chart{
     background-color: orange;
+    align-items: center;
     width:330px;
     border-width: 10px;
     border-style: solid;
