--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ h1, h3, p{
     text-align: center;
 }
     
-.myWeek1{
+.Homework{
     margin: auto;
     max-width: 600px;
     background-color: bisque;
@@ -31,7 +31,6 @@ h1, h3, p{
 /* Set the apperance of the class, chart */
 .chart{
     background-color: orange;
-    align-items: center;
     width:330px;
     border-width: 10px;
     border-style: solid;
