--- a/index2.css
+++ b/index2.css
@@ -9,8 +9,7 @@
 
 /* Set the background color for my page: */
 body{
-    background-color: rgb(111, 154, 111);
-    justify-content: center;
+    background-color: rgb(178, 202, 178);
  
 }
 /* Start with white and bring down toward grey */
@@ -21,35 +20,228 @@ h1, h3, p{
     font-family: 'Roboto', sans-serif;
     text-align: center;
 }
-    
-.Homework{
-    margin: auto;
-    max-width: 700px;
+
+/* Appearance for buttons */
+
+.containerButton {
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.button1{
+    width:200px;
+    height:50px;
+    margin-right:5px;
+    border-width: 2px;
+    border-color: black;
+    color: white;
+    background-color: #a3a375;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 #c1c1a4;
+    outline: none;
+    font-size: 15px;
+}
+
+.button1:hover{
+    box-shadow: inset 200px 0 0 0 #c1c1a4;
+    cursor: pointer;
+}
+
+.button2{
+    width:300px;
+    height:75px;
+    margin-bottom:20px;
+    border-width: 2px;
+    border-color: black;
+    color: white;
+    background-color: #a3a375;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 #c1c1a4;
+    outline: none;
+    font-size: 25px;
+}
+
+.button2:hover{
+    box-shadow: inset 300px 0 0 0 #c1c1a4;
+    cursor: pointer;
+}
+
+.button3{
+    width:300px;
+    height:75px;
+    margin-bottom:20px;
+    margin-top:150px;
+    border-width: 2px;
+    border-color: black;
+    color: white;
+    background-color: #a3a375;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 #c1c1a4;
+    outline: none;
+    font-size: 25px;
+}
+
+.button3:hover{
+    box-shadow: inset 300px 0 0 0 #c1c1a4;
+    cursor: pointer;
+}
+
+/* Set the apperance of the class, chart and weeks in portfolio */
+
+
+
+.chart{
+    width: auto;
+    height: auto;
+    margin-bottom:20px;
     background-color: white;
+
+    
+}
+
+.abc{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
     border: solid;
     border-radius: 5px;
-    border-color: gainsboro;
-    border-width: 3px;
-   
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
 }
 
-
-
-/* Set the apperance of the class, chart */
-.chart{
-    margin: auto;
-    background-color: white;
-    width:485px;
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 3px;
-    border-color: rgb(60, 60, 60);
-    
-    
+.Week1{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
 }
-/* Set the appearance for a particular chart */
-#Chart2{
-    width: 680px
 
+.Week2{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
 }
-    
+
+.Week3{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+.Week4{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+.Week5{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+.Week7{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+.Week8{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+.Week9{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+.Week10{
+    margin: auto; 
+    max-width: 850px;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+}
