--- a/index2.css
+++ b/index2.css
@@ -101,6 +101,11 @@ h1, h3, p{
 
     
 }
+@media only screen and (max-width: 600px) {
+  .chart {
+    width: 90%;
+  }
+}
 
 .abc{
     margin: auto; 
