--- a/index2.css
+++ b/index2.css
@@ -89,6 +89,17 @@ h1, h3, p{
     cursor: pointer;
 }
 
+ .pagecontainer {
+   display: grid;
+ 
+ }
+
+body{
+    background-color:rgb(250, 243, 250);
+    max-width: 90%;
+    margin: auto;
+ }
+
 /* Set the apperance of the class, chart and weeks in portfolio */
 
 
@@ -101,6 +112,19 @@ h1, h3, p{
 
     
 }
+
+ .containerx {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 30px 30px;
+    border: 1.5px solid purple;
+    margin-top: 30px;
+    border-style: solid;
+    border-color:purple;
+    padding: 30px;
+    border-radius: 25px;
+  }
 
 
 .abc{
@@ -246,3 +270,34 @@ h1, h3, p{
     width: auto;
     height: auto;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 10px;
+  justify-content: center !important;
+  vertical-align: bottom;
+  text-align: center !important;
+  align-content: center;
+  margin:auto;
+  max-width: 400px;
+  margin-bottom: 10px !important;
+  margin-top: 10px !important;
+  font-size: xx-small;
+  letter-spacing: 0.1px;
+}
+
+.grid-item {
+  background-color: white;
+  padding: 10px;
+  text-align: center; 
+  border-width: .2em;
+  height: 100%; /* can do %s here too! */
+  width: 100%;
+  display: inline-block !important;
+  min-width: 280px;
+  font-size: 10px;
+  margin: 0 auto;
+}
+
