--- a/index2.css
+++ b/index2.css
@@ -111,14 +111,21 @@ h1, h3, p{
 }
 
  .containerx {
-    display: inline-block;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 70px;
-    padding-bottom: 70px;
-    border-radius: 5px;
-    padding: 20px;
-    display: inline-block;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    position: relative;
+    left: 0px;
+    width: 100%;
+    text-align: justify;
+    border: 1.5px solid purple;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    padding: 5px;
+    right: 0px;
+    margin-top: 5px;
   }
 
 
