--- a/index2.css
+++ b/index2.css
@@ -102,10 +102,18 @@ h1, h3, p{
 
 
 .chart{
-    width: auto;
-    height: auto;
+    margin: auto; 
+    max-width: 100%;
+    background-color:rgba(162, 220, 163, 0.5);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
     margin-bottom:20px;
-    background-color: white;   
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto; 
 }
 
 .abc{
@@ -123,134 +131,7 @@ h1, h3, p{
     height: auto;
 }
 
-.Week1{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
 
-.Week2{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-
-.Week3{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-.Week4{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-.Week5{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-.Week7{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-.Week8{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-.Week9{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-.Week10{
-    margin: auto; 
-    max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
-    border: solid;
-    border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
-    margin-bottom:20px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
 
 
 
