--- a/index2.css
+++ b/index2.css
@@ -8,7 +8,7 @@ body{
     background-color: rgb(178, 202, 178);
  
 }
-/* Start with white and bring down toward grey */
+
 
 /* Choose the appearance of the tags, h1, h3 and p: */
 h1, h3, p{
@@ -88,20 +88,10 @@ h1, h3, p{
 /* Set the apperance of the class, chart and weeks in portfolio */
 
 
-
-.chart{
-    width: auto;
-    height: auto;
-    margin-bottom:20px;
-    background-color: white;
-
-    
-}
-
 .abc{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -109,14 +99,15 @@ h1, h3, p{
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
+
 }
 
 .Week1{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -131,7 +122,7 @@ h1, h3, p{
 .Week2{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -146,7 +137,7 @@ h1, h3, p{
 .Week3{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -160,7 +151,7 @@ h1, h3, p{
 .Week4{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -174,7 +165,7 @@ h1, h3, p{
 .Week5{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -188,7 +179,7 @@ h1, h3, p{
 .Week7{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -202,7 +193,7 @@ h1, h3, p{
 .Week8{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -216,7 +207,7 @@ h1, h3, p{
 .Week9{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
@@ -230,7 +221,7 @@ h1, h3, p{
 .Week10{
     margin: auto; 
     max-width: 850px;
-    background-color:rgba(162, 220, 163, 0.5);
+    background-color:rgb(170,200,180);
     border: solid;
     border-radius: 5px;
     border-color:rgba(48, 38, 38,0.75);
