--- a/index2.css
+++ b/index2.css
@@ -90,7 +90,7 @@ h1, h3, p{
 
 .abc{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -102,7 +102,7 @@ h1, h3, p{
 
 .Week1{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -113,7 +113,7 @@ h1, h3, p{
 
 .Week2{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -124,7 +124,7 @@ h1, h3, p{
 
 .Week3{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -134,7 +134,7 @@ h1, h3, p{
 }
 .Week4{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -144,7 +144,7 @@ h1, h3, p{
 }
 .Week5{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -154,7 +154,7 @@ h1, h3, p{
 }
 .Week7{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -164,7 +164,7 @@ h1, h3, p{
 }
 .Week8{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -174,7 +174,7 @@ h1, h3, p{
 }
 .Week9{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
@@ -184,7 +184,7 @@ h1, h3, p{
 }
 .Week10{
     margin: auto; 
-    max-width: 850px;
+    max-width: 80%;
     margin-bottom:20px;
     align-items: center;
     justify-content: center;
