--- a/index2.css
+++ b/index2.css
@@ -97,6 +97,7 @@ h1, h3, p{
     text-align: center;
     width: 100%;
     height: 100%;
+    min-width: 350px;
 
 }
 
@@ -109,6 +110,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 
 .Week2{
@@ -120,6 +122,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 
 .Week3{
@@ -131,6 +134,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 .Week4{
     margin: auto; 
@@ -141,6 +145,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 .Week5{
     margin: auto; 
@@ -151,6 +156,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 .Week7{
     margin: auto; 
@@ -161,6 +167,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 .Week8{
     margin: auto; 
@@ -171,6 +178,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 .Week9{
     margin: auto; 
@@ -181,6 +189,7 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
 .Week10{
     margin: auto; 
@@ -191,4 +200,5 @@ h1, h3, p{
     text-align: center;
     width: auto;
     height: auto;
+    min-width: 350px;
 }
