--- a/index2.css
+++ b/index2.css
@@ -93,7 +93,7 @@ h1, h3, p{
 }
 
 
-.abc{
+.Proj1{
     margin: auto; 
     max-width: 900px;
     margin-bottom:20px;
@@ -109,6 +109,23 @@ h1, h3, p{
     border-color:rgba(48, 38, 38,0.75);
 
 
+}
+
+.Proj2{
+    margin: auto; 
+    max-width: 900px;
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    min-width: 350px;
+    background-color:rgb(170,200,180);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    
 }
 
 .Week1{
