--- a/index2.css
+++ b/index2.css
@@ -85,6 +85,26 @@ h1, h3, p{
     cursor: pointer;
 }
 
+.button4{
+    width:300px;
+    height:75px;
+    margin-bottom:20px;
+    margin-top:150px;
+    border-width: 2px;
+    border-color: black;
+    color: white;
+    background-color: #a3a375;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 #c1c1a4;
+    outline: none;
+    font-size: 25px;
+}
+
+.button4:hover{
+    box-shadow: inset 300px 0 0 0 #c1c1a4;
+    cursor: pointer;
+}
+
 /* Set the apperance of the class, chart and weeks in portfolio */
 
 .container{
