--- a/index2.css
+++ b/index2.css
@@ -66,22 +66,23 @@ h1, h3, p{
 }
 
 .button3{
-    width:300px;
-    height:75px;
+    width:100px;
+    height:50px;
     margin-bottom:20px;
-    margin-top:150px;
+    margin-top:10px;
     border-width: 2px;
     border-color: black;
+    border-radius: 5px;
     color: white;
     background-color: #a3a375;
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 #c1c1a4;
     outline: none;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .button3:hover{
-    box-shadow: inset 300px 0 0 0 #c1c1a4;
+    box-shadow: inset 100px 0 0 0 #c1c1a4;
     cursor: pointer;
 }
 
