--- a/index2.css
+++ b/index2.css
@@ -15,6 +15,7 @@ h1, h3, p{
     color:rgb(0, 0, 0);
     font-family: 'Roboto', sans-serif;
     text-align: center;
+    max-width: 700px;
 }
 
 /* Appearance for buttons */
@@ -165,6 +166,24 @@ h1, h3, p{
     border-color:rgba(48, 38, 38,0.75);
     
 }
+
+.Proj4{
+    margin: auto; 
+    max-width: 900px;
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    min-width: 350px;
+    background-color:rgb(170,200,180);
+    border: solid;
+    border-radius: 5px;
+    border-color:rgba(48, 38, 38,0.75);
+    
+}
+
 
 .Week1{
     margin: auto; 
