--- a/index2.css
+++ b/index2.css
@@ -15,7 +15,7 @@ h1, h3, p{
     color:rgb(0, 0, 0);
     font-family: 'Roboto', sans-serif;
     text-align: center;
-    max-width: 700px;
+    width: 700px;
 }
 
 /* Appearance for buttons */
