--- a/index2.css
+++ b/index2.css
@@ -124,10 +124,10 @@ h1, h3, p{
     width: 100%;
     height: 100%;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(171, 219, 156);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 
 
 }
