--- a/index2.css
+++ b/index2.css
@@ -5,14 +5,14 @@
 
 /* Set the background color for my page: */
 body{
-    background-color: rgb(178, 200, 182);
+    background-color: rgb(92, 117, 94);
  
 }
 
 
 /* Choose the appearance of the tags, h1, h3 and p: */
 h1, h3, p{
-    color:rgb(0, 0, 0);
+    color:rgb(247, 220, 180);
     font-family: 'Roboto', sans-serif;
     text-align: center;
 }
@@ -34,7 +34,7 @@ h1, h3, p{
     border-width: 2px;
     border-color: black;
     color: white;
-    background-color: #a3a375;
+    background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 #c1c1a4;
     outline: none;
@@ -53,7 +53,7 @@ h1, h3, p{
     border-width: 2px;
     border-color: black;
     color: white;
-    background-color: #a3a375;
+    background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 #c1c1a4;
     outline: none;
@@ -73,7 +73,7 @@ h1, h3, p{
     border-width: 2px;
     border-color: black;
     color: white;
-    background-color: #a3a375;
+    background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 #c1c1a4;
     outline: none;
@@ -94,7 +94,7 @@ h1, h3, p{
     border-radius: 4px;
     border-color: black;
     color: white;
-    background-color: #a3a375;
+    background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 #c1c1a4;
     outline: none;
@@ -124,7 +124,7 @@ h1, h3, p{
     width: 100%;
     height: 100%;
     min-width: 350px;
-    background-color:rgb(171, 219, 156);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
     border-color:black;
@@ -142,10 +142,10 @@ h1, h3, p{
     width: 100%;
     height: 100%;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
     
 }
 
@@ -159,10 +159,10 @@ h1, h3, p{
     width: 100%;
     height: 100%;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
     
 }
 
@@ -176,10 +176,10 @@ h1, h3, p{
     width: 100%;
     height: 100%;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
     
 }
 
