--- a/index2.css
+++ b/index2.css
@@ -36,13 +36,13 @@ h1, h3, p{
     color: white;
     background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
-    box-shadow: inset 0 0 0 0 #c1c1a4;
+    box-shadow: inset 0 0 0 0 #F7DCB4;
     outline: none;
     font-size: 15px;
 }
 
 .button1:hover{
-    box-shadow: inset 200px 0 0 0 #c1c1a4;
+    box-shadow: inset 200px 0 0 0 #F7DCB4;
     cursor: pointer;
 }
 
@@ -55,13 +55,13 @@ h1, h3, p{
     color: white;
     background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
-    box-shadow: inset 0 0 0 0 #c1c1a4;
+    box-shadow: inset 0 0 0 0 #F7DCB4;
     outline: none;
     font-size: 25px;
 }
 
 .button2:hover{
-    box-shadow: inset 300px 0 0 0 #c1c1a4;
+    box-shadow: inset 300px 0 0 0 #F7DCB4;
     cursor: pointer;
 }
 
@@ -75,13 +75,13 @@ h1, h3, p{
     color: white;
     background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
-    box-shadow: inset 0 0 0 0 #c1c1a4;
+    box-shadow: inset 0 0 0 0 #F7DCB4;
     outline: none;
     font-size: 25px;
 }
 
 .button3:hover{
-    box-shadow: inset 300px 0 0 0 #c1c1a4;
+    box-shadow: inset 300px 0 0 0 #F7DCB4;
     cursor: pointer;
 }
 
@@ -96,13 +96,13 @@ h1, h3, p{
     color: white;
     background-color: rgb(169, 125, 93);
     transition: ease-out 0.2s;
-    box-shadow: inset 0 0 0 0 #c1c1a4;
+    box-shadow: inset 0 0 0 0 #F7DCB4;
     outline: none;
     font-size: 15px;
 }
 
 .button4:hover{
-    box-shadow: inset 100px 0 0 0 #c1c1a4;
+    box-shadow: inset 100px 0 0 0 #F7DCB4;
     cursor: pointer;
 }
 
