--- a/index2.css
+++ b/index2.css
@@ -113,6 +113,23 @@ h1, h3, p{
     margin: 0 auto;
 }
 
+.ProjHeader{
+    margin: auto; 
+    max-width: 900px;
+    margin-bottom:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    min-width: 350px;
+    background-color:rgb(156, 159, 132);
+    border: solid;
+    border-radius: 5px;
+    border-color:black;
+
+
+}
 
 .Proj1{
     margin: auto; 
