--- a/index2.css
+++ b/index2.css
@@ -211,10 +211,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 
 .Week2{
@@ -227,10 +227,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 
 .Week3{
@@ -243,10 +243,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 .Week4{
     margin: auto; 
@@ -258,10 +258,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 .Week5{
     margin: auto; 
@@ -273,10 +273,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 .Week7{
     margin: auto; 
@@ -288,10 +288,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 .Week8{
     margin: auto; 
@@ -303,10 +303,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 .Week9{
     margin: auto; 
@@ -318,10 +318,10 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
 .Week10{
     margin: auto; 
@@ -333,8 +333,8 @@ h1, h3, p{
     width: auto;
     height: auto;
     min-width: 350px;
-    background-color:rgb(170,200,180);
+    background-color:rgb(156, 159, 132);
     border: solid;
     border-radius: 5px;
-    border-color:rgba(48, 38, 38,0.75);
+    border-color:black;
 }
