--- a/index2.css
+++ b/index2.css
@@ -133,6 +133,24 @@ h1, h3, p{
 
 
 }
+.References{
+    margin: auto; 
+    max-width: 900px;
+    margin-bottom:20px;
+    margin-top:20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    min-width: 350px;
+    background-color:rgb(156, 159, 132);
+    border: solid;
+    border-radius: 5px;
+    border-color:black;
+
+
+}
 
 .Proj1{
     margin: auto; 
@@ -148,7 +166,6 @@ h1, h3, p{
     border: solid;
     border-radius: 5px;
     border-color:black;
-    padding: 20px;
 
 
 }
@@ -167,7 +184,7 @@ h1, h3, p{
     border: solid;
     border-radius: 5px;
     border-color:black;
-    padding 20px;
+
     
 }
 
