--- a/index2.css
+++ b/index2.css
@@ -15,6 +15,7 @@ h1, h3, p{
     color:black;
     font-family: 'Roboto', sans-serif;
     text-align: center;
+    max-width: 800px;
 }
 
 p{color:black;
